@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.57 2006/02/14 02:51:43 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.58 2006/03/10 19:40:12 schorsch Exp $
 #
 # Makefile for ray tracing library routines
 #
@@ -34,20 +34,20 @@ OGLOBJ = rglfile.o rglmat.o rgldomat.o rglsurf.o rglinst.o rglsrc.o
 
 LIBFILES = tmesh.cal
 
-librt.a:	$(RTOBJ) $(PICOBJ) $(STDOBJ) $(SYSOBJ)
-	rm -f librt.a
-	ar rc librt.a $(RTOBJ) $(PICOBJ) $(STDOBJ) $(SYSOBJ)
-	-ranlib librt.a
+librtrad.a:	$(RTOBJ) $(PICOBJ) $(STDOBJ) $(SYSOBJ)
+	rm -f librtrad.a
+	ar rc librtrad.a $(RTOBJ) $(PICOBJ) $(STDOBJ) $(SYSOBJ)
+	-ranlib librtrad.a
 
 install:	all
-	mv -f librt.a ../lib
+	mv -f librtrad.a ../lib
 	cd $(LIBDIR) && rm -f $(LIBFILES)
 	cp -f $(LIBFILES) $(LIBDIR)
 
-all:	librt.a $(SPECIAL)
+all:	librtrad.a $(SPECIAL)
 
 clean:
-	rm -f *.o librt.a
+	rm -f *.o librtrad.a
 
 ogl:	$(OGLOBJ)
 	rm -f librgl.a
