@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.62 2005/09/17 05:14:14 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.63 2006/03/10 19:40:13 schorsch Exp $
 #
 # Compiles for image processing and display programs
 #
@@ -48,85 +48,85 @@ clean:
 	cd tiff; make distclean
 
 pfilt:	pfilt.o pf2.o pf3.o
-	$(CC) $(CFLAGS) -o pfilt pfilt.o pf2.o pf3.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pfilt pfilt.o pf2.o pf3.o -lrtrad $(MLIB)
 
 pcond:	pcond.o pcond2.o pcond3.o pcond4.o warp3d.o
 	$(CC) $(CFLAGS) -o pcond pcond.o pcond2.o pcond3.o pcond4.o warp3d.o \
--lrt $(MLIB)
+-lrtrad $(MLIB)
 
 pcwarp:	pcwarp.o warp3d.o
-	$(CC) $(CFLAGS) -o pcwarp pcwarp.o warp3d.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pcwarp pcwarp.o warp3d.o -lrtrad $(MLIB)
 
 ttyimage:	ttyimage.o
-	$(CC) $(CFLAGS) -o ttyimage ttyimage.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ttyimage ttyimage.o -lrtrad $(MLIB)
 
 pvalue:	pvalue.o
-	$(CC) $(CFLAGS) -o pvalue pvalue.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pvalue pvalue.o -lrtrad $(MLIB)
 
 pcompos:	pcompos.o
-	$(CC) $(CFLAGS) -o pcompos pcompos.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pcompos pcompos.o -lrtrad $(MLIB)
 
 psign:	psign.o
-	$(CC) $(CFLAGS) -o psign psign.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o psign psign.o -lrtrad $(MLIB)
 
 ra_gif:	ra_gif.o clrtab.o neuclrtab.o
-	$(CC) $(CFLAGS) -o ra_gif ra_gif.o clrtab.o neuclrtab.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_gif ra_gif.o clrtab.o neuclrtab.o -lrtrad $(MLIB)
 
 ra_ps:	ra_ps.o
-	$(CC) $(CFLAGS) -o ra_ps ra_ps.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_ps ra_ps.o -lrtrad $(MLIB)
 
 ra_ppm:		ra_ppm.o
-	$(CC) $(CFLAGS) -o ra_ppm ra_ppm.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_ppm ra_ppm.o -lrtrad $(MLIB)
 
 ra_bmp:		ra_bmp.o
-	$(CC) $(CFLAGS) -o ra_bmp ra_bmp.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_bmp ra_bmp.o -lrtrad $(MLIB)
 
 ra_t8:	ra_t8.o clrtab.o neuclrtab.o
-	$(CC) $(CFLAGS) -o ra_t8 ra_t8.o clrtab.o neuclrtab.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_t8 ra_t8.o clrtab.o neuclrtab.o -lrtrad $(MLIB)
 
 ra_t16: ra_t16.o
-	$(CC) $(CFLAGS) -o ra_t16 ra_t16.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_t16 ra_t16.o -lrtrad $(MLIB)
 
 ra_rgbe:	ra_rgbe.o
-	$(CC) $(CFLAGS) -o ra_rgbe ra_rgbe.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_rgbe ra_rgbe.o -lrtrad $(MLIB)
 
 ra_pict:    ra_pict.o
-	$(CC) $(CFLAGS) -o ra_pict ra_pict.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_pict ra_pict.o -lrtrad $(MLIB)
 
 ra_hexbit:	ra_hexbit.o
-	$(CC) $(CFLAGS) -o ra_hexbit ra_hexbit.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_hexbit ra_hexbit.o -lrtrad $(MLIB)
 
 ximage:	x11image.o x11raster.o clrtab.o
 	$(CC) $(CFLAGS) -o ximage x11image.o x11raster.o \
-clrtab.o -lrt -lX11 $(MLIB)
+clrtab.o -lrtrad -lX11 $(MLIB)
 
 protate:		protate.o
-	$(CC) $(CFLAGS) -o protate protate.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o protate protate.o -lrtrad $(MLIB)
 
 pextrem:	pextrem.o
-	$(CC) $(CFLAGS) -o pextrem pextrem.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pextrem pextrem.o -lrtrad $(MLIB)
 
 pflip:		pflip.o
-	$(CC) $(CFLAGS) -o pflip pflip.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pflip pflip.o -lrtrad $(MLIB)
 
 pcomb:	pcomb.o
-	$(CC) $(CFLAGS) -o pcomb pcomb.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pcomb pcomb.o -lrtrad $(MLIB)
 
 pinterp:	pinterp.o
-	$(CC) $(CFLAGS) -o pinterp pinterp.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o pinterp pinterp.o -lrtrad $(MLIB)
 
 ra_xyze:	ra_xyze.o
-	$(CC) $(CFLAGS) -o ra_xyze ra_xyze.o -lrt $(MLIB)
+	$(CC) $(CFLAGS) -o ra_xyze ra_xyze.o -lrtrad $(MLIB)
 
 ra_tiff:	ra_tiff.o ../lib/libtiff.a
-	$(CC) $(CFLAGS) -o ra_tiff ra_tiff.o -lrt -ltiff $(MLIB)
+	$(CC) $(CFLAGS) -o ra_tiff ra_tiff.o -lrtrad -ltiff $(MLIB)
 
 ../common/tiff.h ../common/tiffio.h:	../lib/libtiff.a
 	@chmod u+w ../common/tiff.h ../common/tiffio.h
 	@touch ../common/tiff.h ../common/tiffio.h
 
 normtiff:	normtiff.o ../lib/libtiff.a
-	$(CC) $(CFLAGS) -o normtiff normtiff.o -lrt -ltiff $(MLIB)
+	$(CC) $(CFLAGS) -o normtiff normtiff.o -lrtrad -ltiff $(MLIB)
 
 ../lib/libtiff.a:
 	cd tiff ; ./configure -C -quiet -with-CC=$(CC) \
@@ -140,11 +140,11 @@ normtiff:	normtiff.o ../lib/libtiff.a
 
 xshowtrace:	xshowtrace.o x11findwind.o
 	$(CC) $(CFLAGS) -o xshowtrace xshowtrace.o \
-x11findwind.o -lrt -lX11 $(MLIB)
+x11findwind.o -lrtrad -lX11 $(MLIB)
 
 macbethcal:	macbethcal.o pmapgen.o mx3.o warp3d.o
 	$(CC) $(CFLAGS) -o macbethcal macbethcal.o pmapgen.o mx3.o warp3d.o \
--lrt $(MLIB)
+-lrtrad $(MLIB)
 
 
 macbethcal.o:	pmap.h ../common/color.h ../common/resolu.h
