@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.53 2005/12/16 04:03:42 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.54 2006/03/10 19:40:13 schorsch Exp $
 #
 # Compiles for ray tracing programs.
 #
@@ -30,7 +30,7 @@ LIBDIR = /usr/local/lib/ray
 #
 RLIB = ../lib/libradiance.a
 RCLIB = ../lib/libraycalls.a
-LIBS = -lrt $(MLIB)
+LIBS = -lrtrad $(MLIB)
 
 #
 # Device drivers for rvu (see also devtable.c):
