@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.43 2005/09/19 04:26:09 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.44 2006/03/10 19:40:14 schorsch Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -57,42 +57,42 @@ sun:
 
 findglare:	findglare.o glareval.o glaresrc.o setscan.o
 	$(CC) $(CFLAGS) -o findglare findglare.o glareval.o glaresrc.o \
-setscan.o -lrt -lm
+setscan.o -lrtrad -lm
 
 glarendx:	glarendx.o
-	$(CC) $(CFLAGS) -o glarendx glarendx.o -lrt -lm
+	$(CC) $(CFLAGS) -o glarendx glarendx.o -lrtrad -lm
 
 xglaresrc:	xglaresrc.o x11findwind.o
 	$(CC) $(CFLAGS) -o xglaresrc xglaresrc.o \
-x11findwind.o -lrt -lX11 -lm
+x11findwind.o -lrtrad -lX11 -lm
 
 rad:	rad.o
-	$(CC) $(CFLAGS) -o rad rad.o -lrt -lm
+	$(CC) $(CFLAGS) -o rad rad.o -lrtrad -lm
 
 ranimate:	ranimate.o netproc.o
-	$(CC) $(CFLAGS) -o ranimate ranimate.o netproc.o -lrt -lm
+	$(CC) $(CFLAGS) -o ranimate ranimate.o netproc.o -lrtrad -lm
 
 ranimove:	ranimove.o ranimove1.o ranimove2.o
 	$(CC) $(CFLAGS) -o ranimove ranimove.o ranimove1.o ranimove2.o \
--lraycalls -lradiance -lrt -lm
+-lraycalls -lradiance -lrtrad -lm
 
 rpiece:	rpiece.o Version.o
-	$(CC) $(CFLAGS) -o rpiece rpiece.o Version.o -lrt -lm
+	$(CC) $(CFLAGS) -o rpiece rpiece.o Version.o -lrtrad -lm
 
 rtcontrib:	rtcontrib.o Version.o
-	$(CC) $(CFLAGS) -o rtcontrib rtcontrib.o Version.o -lrt -lm
+	$(CC) $(CFLAGS) -o rtcontrib rtcontrib.o Version.o -lrtrad -lm
 
 vwright:	vwright.o
-	$(CC) $(CFLAGS) -o vwright vwright.o -lrt -lm
+	$(CC) $(CFLAGS) -o vwright vwright.o -lrtrad -lm
 
 vwrays:		vwrays.o
-	$(CC) $(CFLAGS) -o vwrays vwrays.o -lrt -lm
+	$(CC) $(CFLAGS) -o vwrays vwrays.o -lrtrad -lm
 
 getinfo:	getinfo.o
-	$(CC) $(CFLAGS) -o getinfo getinfo.o -lrt
+	$(CC) $(CFLAGS) -o getinfo getinfo.o -lrtrad
 
 glrad:	glrad.o
-	$(CC) $(CFLAGS) -o glrad glrad.o -lrgl -lrt -lGLU -lGL \
+	$(CC) $(CFLAGS) -o glrad glrad.o -lrgl -lrtrad -lGLU -lGL \
 -lX11 -lXext -lm
 
 setscan.o:	setscan.h
