@@ -1565,3 +1565,7 @@ Added -V option to rtcontrib to report actual contributions, rather than
 just ray coefficients.
 
 Fixed bug in ranimate that caused it to fail in continuation of renderings.
+
+Renamed librt.a to librtrad.a, to avoid conflict on Solaris. Almost
+everything now gets linked to -lrtrad instead of -lrt.
+
